# InstaCD-benchmarks

./: .gitmodules  Dockerfile  README.md  pyproject.toml  requirements-bioc.R  requirements-detailed.txt  requirements-github.R  requirements-src.R  requirements.txt
instacd_benchmarks/globe/: README.txt  dag.py  globe.py  globeWrapper.py  main.py  slope.py  statsCalculator.py  utils.py
instacd_benchmarks/globe/logs/: log_2024-03-19_19:42:03.748665.txt
instacd_benchmarks/utils/: ecd_processor.py  entropy_discretization.py  timeout.py
runners/: base.py  ges_runner.py  globe_runner.py  lingam_runner.py  pc_runner.py  resit_runner.py
unittests/utils/: test_discretization.py  test_ecd_processor.py
